@startuml
class ClinicalChemistryTechnologist
class Company {
-designation
}
class Test {
-internalCode
-nhsCode
-createdAt
-designation
-dateAnalysis
-timeAnalysis
-dateDiagnosis
-timeDiagnosis
-dateValidation
-timeValidation
}
class TestType {
-code
-description
}
class Parameter {
-code
-shortName
-description
}
class TestParameterResult {
-createdAt
-value
-metric
}
class ReferenceValueModule

Company "1"-down-"*" TestType : conducts >
TestType "*"-right-"1" ReferenceValueModule : makes use of >
TestParameterResult "1"--"1" Parameter : associated to >
Test "*"--"1..*" Parameter : requests analysis of >
Test "*"-up-"1" Company : performs <
Test "*"-right-"1" "TestType" : is of >
(Test, Parameter) .. TestParameter
TestParameter "1"-right- "0..1"TestParameterResult : contains >
TestParameterResult "*"-right-"1" ClinicalChemistryTechnologist : generates <
ReferenceValue "*"-up-"1" ReferenceValueModule : provided by >
TestParameterResult "1"-up-"1" ReferenceValue : records >
@enduml